--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@unocss/cli": "^0.55.0",
+    "autoprefixer": "^10.4.16",
     "browser-sync": "^2.27.11",
     "gulp": "^4.0.2",
     "gulp-data": "^1.3.1",
@@ -22,6 +23,7 @@
     "gulp-imagemin": "^8.0.0",
     "gulp-jsonminify": "^1.1.0",
     "gulp-uglify": "^3.0.2",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.3"
   },
   "keywords": [],
